FIX:dark mode

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,8 +5,12 @@
 .appDark {
   background-color: black;
   color: White;
+  width: 100vw;
+  height: 100vh;
 }
 .appLight {
   background-color: white;
   color: black;
+  width: 100vw;
+  height: 100vh;
 }
